--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack-bundle-analyzer": "^4.7.0"
   },
   "eslintConfig": {
     "root": true,
