--- a/package.json
+++ b/package.json
@@ -1,55 +1,42 @@
 {
-  "name": "wms-client",
-  "version": "0.1.0",
-  "private": true,
+  "name": "learn-webpack",
+  "version": "1.0.0",
+  "description": "",
+  "main": "./src/main.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=online vue-cli-service serve",
-    "local": "vue-cli-service serve",
-    "buildSelf": "cross-env NODE_ENV=productionSelf vue-cli-service build",
-    "build": "cross-env NODE_ENV=production vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "webpack --config ./build/webpack.prod.js",
+    "dev": "webpack-dev-server --config ./build/webpack.dev.js --open"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "babel": "^6.23.0",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.6",
+    "bable-loader": "^0.0.1-security",
+    "clean-webpack-plugin": "^4.0.0",
+    "compression-webpack-plugin": "^6.1.1",
+    "css-loader": "^3.6.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
+    "less-loader": "^6.2.0",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^15.10.1",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
-    "axios": "^1.1.3",
-    "core-js": "^3.8.3",
-    "echarts": "^5.4.0",
-    "element-ui": "^2.15.10",
-    "less-loader": "^6.2.0",
-    "path-to-regexp": "^6.2.1",
-    "vue": "^2.6.14",
+    "axios": "^1.3.4",
+    "core-js": "^3.30.0",
+    "echarts": "^5.4.2",
+    "element-ui": "^2.15.13",
+    "vue": "^2.7.14",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "babel-plugin-component": "^1.1.1",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14",
-    "webpack-bundle-analyzer": "^4.7.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  }
 }
