--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./src/main.js",
   "scripts": {
     "build": "webpack --config ./build/webpack.prod.js",
-    "serve": "cross-env MYENV=serve webpack-dev-server --config ./build/webpack.dev.js --hot true --mode=development  --open",
-    "local": "cross-env MYENV=local webpack-dev-server --config ./build/webpack.dev.js --hot true --open"
+    "serve": "cross-env NODE_ENV=serve node ./build/dev-serve.js",
+    "local": "cross-env NODE_ENV=local node ./build/dev-serve.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "compression-webpack-plugin": "^6.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^3.6.0",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
     "less-loader": "^6.2.0",
@@ -30,7 +31,8 @@
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.13.2"
+    "webpack-dev-server": "^4.13.2",
+    "webpack-hot-middleware": "^2.25.3"
   },
   "dependencies": {
     "axios": "^1.3.4",
