--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.15.10",
     "less-loader": "^6.2.0",
     "path-to-regexp": "^6.2.1",
+    "pinyin": "^3.0.0-alpha.4",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
