--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pinyin": "^3.0.0-alpha.4",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
